--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+  <!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Website</title>
+
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
@@ -128,28 +129,28 @@
 
         <div class="item active" id="slide1">
           <div class="carousel-caption">
-            <h4>Bootstrap 3</h4>
+            <h4>Unreal Games</h4>
             <p> Learn your Bootstrap</p>
           </div><!--end carousel caption-->
         </div><!--end item-->
 
         <div class="item"  id="slide2">
           <div class="carousel-caption">
-            <h4>Learn to code in 4 hrs</h4>
+            <h4>Need For Speed</h4>
             <p> Front to Back end</p>
           </div><!--end carousel caption-->
         </div><!--end item-->
 
         <div class="item" id="slide3">
           <div class="carousel-caption">
-            <h4>Web Hosting</h4>
+            <h4>Assassin's Creed</h4>
             <p> Hosting in the Web</p>
           </div><!--end carousel caption-->
         </div><!--end item-->
 
         <div class="item" id="slide4">
           <div class="carousel-caption">
-            <h4>Web Hosting</h4>
+            <h4>Batman Akham Origins</h4>
             <p> Hosting in the Web</p>
           </div><!--end carousel caption-->
         </div><!--end item-->
